--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@kalimahapps/vue-icons": "^1.7.1",
     "@tailwindcss/cli": "^4.0.14",
     "@tailwindcss/postcss": "^4.0.14",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-cookies": "^1.0.6",
+    "vue3-google-login": "^2.0.33"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.15",
